# DeskFlow

./: .gitignore  README.md  config.default.yaml  pyproject.toml
skills/: app-control.md  browser-automation.md  coding.md  file-management.md  system-admin.md  typing-input.md
src/deskflow/: __init__.py  __main__.py  cli.py  config.py
src/deskflow/agent/: __init__.py  client.py  conversation.py  loop.py
src/deskflow/memory/: __init__.py  context.py  store.py  structured.py
src/deskflow/safety/: __init__.py  classifier.py  confirm.py  rules.py
src/deskflow/scheduler/: __init__.py  scheduler.py
src/deskflow/skills/: __init__.py  loader.py
src/deskflow/tools/: __init__.py  accessibility.py  applescript.py  apps.py  base.py  browser.py  clipboard.py  filesystem.py  keyboard_mouse.py  notifications.py  ocr.py  python_exec.py  registry.py  screenshot.py  shell.py  system.py  text_gen.py  window.py
