[project]
name = "deskflow"
version = "0.1.0"
description = "AI agent infrastructure for automating macOS tasks"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "pyobjc-framework-Vision>=10.0",
]

[project.scripts]
deskflow = "deskflow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deskflow"]
